# rustann

./: Cargo.toml  README.md
backup/: main.txt  visualization.txt
csv/: airquality.csv
src/: lib.rs  visualization.rs
src/data/: mod.rs  preprocessing.rs
src/neural_network/: activation.rs  layers.rs  loss.rs  mod.rs
