[package]
name = "airquality_nn"
version = "0.1.0"
edition = "2024"


[dependencies]
csv = "1.1"               # Untuk membaca file CSV
ndarray = "0.16.1"          # Untuk operasi array/matriks
ndarray-rand = "0.15.0"     # Untuk inisialisasi random weights dan biases
rand = "0.9"              # Untuk distribusi random
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0.1"
plotters = "0.3"